@@ -6,6 +6,8 @@ PHP                                                                        NEWS
 - Fixed mess with CGI/CLI -d option (now it works with cgi; constants are
   working exactly like in php.ini; with FastCGI -d affects all requests).
   (Dmitry)
+- Fixed bug #39017 (foreach(($obj = new myClass) as $v); echo $obj; segfaults).
+  (Dmitry)
 - Fixed bug #39004 (Fixed generation of config.nice with autoconf 2.60).
   (Ilia)
 - Fixed bug #39003 (__autoload() is called for type hinting). (Dmitry, Tony)
